--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    background-color: rgb(233, 233, 233);
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
 
   }
   
   .calculator {
-    text-align: center;
-    max-width: 400px;
-    margin: auto;
-    background-color: rgba(128, 125, 125, 0.493);
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    height: 450px;
+  max-width: 400px;
+  margin: 50px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  min-height: 400px; /* Defina uma altura mínima */
+
 
   }
   
@@ -49,5 +49,10 @@ body {
   
   button:hover {
     background-color: #45a049;
+  }
+
+  #result {
+    position: absolute;
+    padding-top: 20px;
   }
   
